Attempt fix of drag bar hidden on mobile bug (add 100% height to html/body)

--- a/src/sass/base/_reset.scss
+++ b/src/sass/base/_reset.scss
@@ -29,10 +29,12 @@ html {
 
 body {
   box-sizing: border-box;
-  // position:relative;
+}
 
+html,
+body {
   @include respond(800) {
-    overflow: auto;
+    height: 100%;
   }
 }
 
